hphp/hack/test/typecheck/constraint_array_index/after/lambda_string_bad_index.php
<?hh
function f(): void {
  $f = ($v ==> $v[""]);
  $f("abc");
}
